--- a/caja.html
+++ b/caja.html
@@ -18,7 +18,7 @@
             width: 300px;
             height: 250px;
             margin: auto;
-            perspective: 800px; /* Added for 3D effect */
+            perspective: 800px;
         }
         .box-base {
             position: absolute;
@@ -34,9 +34,9 @@
         }
         .box-lid {
             position: absolute;
-            top: 17%; /* Adjusted position */
+            top: 17%;
             left: 50%;
-            transform-origin: bottom center; /* Changed for realistic hinge */
+            transform-origin: bottom center;
             width: 102%;
             height: 45%;
             background-color: #d2b48c;
@@ -46,7 +46,7 @@
             transform: translateX(-50%); 
         }
         .box-illustration.open .box-lid {
-            transform: translateX(-50%) rotateX(-140deg); /* Changed for 3D rotation */
+            transform: translateX(-50%) rotateX(-140deg);
         }
         .symbol-draggable {
             cursor: grab;
@@ -78,7 +78,6 @@
 </head>
 <body class="text-gray-800">
 
-    <!-- Header Section -->
     <header class="main-gradient text-white text-center py-12 sm:py-16 shadow-lg">
         <div class="container mx-auto px-4">
             <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold tracking-tight">La Caja Reiki</h1>
@@ -86,9 +85,7 @@
         </div>
     </header>
 
-    <!-- Main Content -->
     <main class="container mx-auto px-6 py-12">
-        <!-- Back Button -->
         <div class="mb-12">
             <a href="index.html" class="inline-flex items-center text-purple-700 hover:text-purple-900 transition-colors">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" /></svg>
@@ -96,12 +93,14 @@
             </a>
         </div>
 
-        <!-- Interactive Creation Guide -->
         <section class="bg-white rounded-2xl shadow-xl p-8">
-            <h2 class="text-3xl font-bold text-purple-800 mb-8 text-center">Crea y Activa tu Caja Reiki</h2>
+            <h2 class="text-3xl font-bold text-purple-800 mb-4 text-center">Crea y Activa tu Caja Reiki</h2>
             
+            <div class="my-8 flex justify-center">
+                <img src="caja-reiki-ilustracion.jpg" alt="Ilustración de una Caja Reiki con símbolos e intenciones" class="rounded-lg shadow-lg max-w-sm w-full">
+            </div>
+
             <div class="max-w-4xl mx-auto">
-                <!-- Step 1: Choose your box -->
                 <div class="mb-12 text-center">
                     <h3 class="text-2xl font-semibold mb-2">Paso 1: Elige tu Caja</h3>
                     <p class="text-gray-600 mb-4">Puede ser de cualquier material. ¡Lo importante es que resuene contigo!</p>
@@ -112,7 +111,6 @@
                     </div>
                 </div>
 
-                <!-- Step 2 & 3: Symbols and Intentions -->
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center mb-12">
                     <div class="text-center">
                         <h3 class="text-2xl font-semibold mb-2">Paso 2: Consagra tu Caja</h3>
@@ -138,7 +136,6 @@
                     </div>
                 </div>
 
-                <!-- Step 4: Activation -->
                 <div class="text-center">
                     <h3 class="text-2xl font-semibold mb-2">Paso 4: Activa con Reiki</h3>
                     <p class="text-gray-600 mb-6">Diariamente, o cada 2-3 días, cierra tu caja y envíale Reiki con tus manos para potenciar todas las intenciones que contiene.</p>
@@ -156,7 +153,6 @@
             </div>
         </section>
         
-        <!-- Intention + Action Section -->
         <section class="mt-12 bg-green-100 border-l-4 border-green-500 text-green-800 p-6 rounded-lg shadow-md">
             <h3 class="font-bold text-xl mb-2">La Fórmula Mágica: Intención + Acción</h3>
             <p class="text-base">Tu Caja Reiki es un poderoso amplificador energético, pero recuerda que la manifestación ocurre cuando alineas tu energía con acciones concretas en el mundo real. Si pides un nuevo trabajo, envía currículums. Si pides sanación, consulta a un profesional. ¡La energía de Reiki acompaña y potencia tus pasos!</p>
@@ -164,7 +160,6 @@
 
     </main>
 
-    <!-- Scroll to Top Button -->
     <button id="scrollTopBtn" class="hidden fixed bottom-5 right-5 bg-purple-600 text-white rounded-full p-3 shadow-lg hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-50 transform hover:scale-110 transition-all duration-200">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M5 15l7-7 7 7" /></svg>
     </button>
