--- a/conceptos.html
+++ b/conceptos.html
@@ -108,7 +108,7 @@
                     </div>
                     <div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Reiki como Herramienta de Transformación</h3>
-                        <p class="text-lg text-gray-600">
+                        <p class="text-lg text-gray-600 text-justify">
                             Con el símbolo <strong>Sei He Ki</strong>, trabajas directamente sobre este ciclo. Te ayuda a liberar patrones de pensamiento negativos, sanar bloqueos emocionales y armonizar tu mente. Al cambiar tus pensamientos, transformas tus emociones y, por ende, tu energía y tu vida.
                         </p>
                     </div>
@@ -131,5 +131,6 @@
 
 </body>
 </html>
+
 
 
