--- a/conceptos.html
+++ b/conceptos.html
@@ -60,15 +60,15 @@
                 <!-- Card: Símbolos y Kotodamas -->
                 <section class="bg-white rounded-2xl shadow-lg p-8 content-card">
                     <h2 class="text-3xl font-bold text-purple-700 mb-4">Símbolos y Kotodamas</h2>
-                    <p class="text-lg text-gray-600 mb-4">
+                    <p class="text-lg text-gray-600 mb-4 text-justify">
                         En Okuden, los <strong>símbolos</strong> son las llaves energéticas que dirigen la energía universal. Pero lo que realmente activa estas llaves es el <strong>Kotodama</strong>.
                     </p>
-                    <p class="text-lg text-gray-600 mb-4">
+                    <p class="text-lg text-gray-600 mb-4 text-justify">
                         Kotodama (言霊) significa <strong>"el espíritu que vive en la palabra"</strong>. La cultura japonesa cree que ciertas palabras, por su vibración e intención sagrada, albergan una energía capaz de influir en la realidad. <strong>No todas las palabras son kotodamas</strong>; solo aquellas que canalizan una conciencia y energía puras.
                     </p>
                     <div class="mt-6 border-t pt-4">
                         <h3 class="text-xl font-semibold text-gray-800 mb-3">Kotodamas en la vida diaria:</h3>
-                        <ul class="space-y-3 text-gray-600">
+                        <ul class="space-y-3 text-gray-600 text-justify">
                             <li><strong>Itadakimasu (いただきます):</strong> Antes de comer. No es "buen provecho", es un "recibo humildemente", honrando la energía vital de los alimentos y a todos los que la hicieron posible.</li>
                             <li><strong>Arigatou gozaimasu (ありがとうございます):</strong> "Gracias". Expresa un profundo respeto y reconocimiento, fortaleciendo la energía positiva entre las personas.</li>
                             <li><strong>Gochisousama deshita (ごちそうさまでした):</strong> Después de comer. Cierra el ciclo de gratitud, agradeciendo por la nutrición y el festín recibido.</li>
@@ -79,10 +79,10 @@
                 <!-- Card: Sanación más allá del tiempo y espacio -->
                 <section class="bg-white rounded-2xl shadow-lg p-8 content-card">
                     <h2 class="text-3xl font-bold text-purple-700 mb-4">Sanar el Pasado y el Futuro</h2>
-                    <p class="text-lg text-gray-600 mb-4">
+                    <p class="text-lg text-gray-600 mb-4 text-justify">
                         El Nivel II trasciende las barreras físicas. Con el símbolo adecuado, puedes enviar energía sanadora a distancia, sin importar dónde se encuentre una persona.
                     </p>
-                    <p class="text-lg text-gray-600">
+                    <p class="text-lg text-gray-600 text-justify">
                         Además, aprendes a sanar heridas del <strong>pasado</strong>, liberando traumas y patrones kármicos, y a enviar luz y bendiciones al <strong>futuro</strong>, sembrando intenciones positivas para tu camino y el de otros.
                     </p>
                 </section>
@@ -94,7 +94,7 @@
                 <div class="space-y-6">
                     <div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Tus Pensamientos Crean tu Realidad</h3>
-                        <p class="text-lg text-gray-600">
+                        <p class="text-lg text-gray-600 text-justify">
                             Un concepto crucial en Reiki es entender que cada pensamiento genera una emoción correspondiente. Un pensamiento de gratitud crea una emoción de alegría; un pensamiento de miedo crea ansiedad.
                         </p>
                     </div>
@@ -108,7 +108,7 @@
                     </div>
                     <div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Reiki como Herramienta de Transformación</h3>
-                        <p class="text-lg text-gray-600 text-justify">
+                        <p class="text-lg text-gray-600 text-justify text-justify">
                             Con el símbolo <strong>Sei He Ki</strong>, trabajas directamente sobre este ciclo. Te ayuda a liberar patrones de pensamiento negativos, sanar bloqueos emocionales y armonizar tu mente. Al cambiar tus pensamientos, transformas tus emociones y, por ende, tu energía y tu vida.
                         </p>
                     </div>
@@ -126,11 +126,12 @@
 
     <!-- Footer -->
     <footer class="text-center py-8 px-4 mt-8">
-        <p class="text-gray-500">&copy; 2025 Rincón Zen. Creado con amor.</p>
+        <p class="text-gray-500">&copy; www.rinconzen.com.ar. Creado con amor.</p>
     </footer>
 
 </body>
 </html>
+
 
 
 
