--- a/extras.html
+++ b/extras.html
@@ -68,7 +68,7 @@
                 <div class="bg-white rounded-2xl shadow-lg p-6">
                     <h3 class="text-xl font-bold text-gray-800">Sanación al Pasado</h3>
                     <p class="text-gray-600 mb-4">Viaja a tu pasado para enviar amor y sanación a tu yo más joven.</p>
-                    <audio controls src="https://github.com/usuario/repo/raw/main/audios/Sanacion%20al%20Pasado.mp3">Tu navegador no soporta el elemento de audio.</audio>
+                    <audio controls src="/audios/Sanacion%20al%20Pasado.mp3"></audio>
                 </div>
                  <!-- Audio Player 2 -->
                 <div class="bg-white rounded-2xl shadow-lg p-6">
