--- a/extras.html
+++ b/extras.html
@@ -74,31 +74,31 @@
                 <div class="bg-white rounded-2xl shadow-lg p-6">
                     <h3 class="text-xl font-bold text-gray-800">Reactivación Celular</h3>
                     <p class="text-gray-600 mb-4">Una meditación de gratitud para sanar y revitalizar cada célula de tu cuerpo.</p>
-                    <audio controls src="https://github.com/usuario/repo/raw/main/audios/reactivacion%20celular%20(gratitud%20a%20las%20celulas).mp3">Tu navegador no soporta el elemento de audio.</audio>
+                    <audio controls src="/audios/reactivacion%20celular%20(gratitud%20a%20las%20celulas).mp3"></audio>
                 </div>
                  <!-- Audio Player 3 -->
                 <div class="bg-white rounded-2xl shadow-lg p-6">
                     <h3 class="text-xl font-bold text-gray-800">Potenciar tu Canal (Hatsurei Ho)</h3>
                     <p class="text-gray-600 mb-4">Una práctica guiada para fortalecer tu conexión con la energía.</p>
-                    <audio controls src="https://github.com/usuario/repo/raw/main//audios/Hatsurei%20Ho.mp3">Tu navegador no soporta el elemento de audio.</audio>
+                    <audio controls src="/audios/Hatsurei%20Ho.mp3"></audio>
                 </div>
                 <!-- Audio Player 4 -->
                 <div class="bg-white rounded-2xl shadow-lg p-6">
                     <h3 class="text-xl font-bold text-gray-800">Tanden Chiryo Ho</h3>
                     <p class="text-gray-600 mb-4">Guía para la desintoxicación energética a través de tu centro vital.</p>
-                    <audio controls src="https://github.com/usuario/repo/raw/main/audios/TANDEN%20CHIRYO%20HO%20(que%20las%20toxinas%20bajen).mp3">Tu navegador no soporta el elemento de audio.</audio>
+                    <audio controls src="/audios/TANDEN%20CHIRYO%20HO%20(que%20las%20toxinas%20bajen).mp3"></audio>
                 </div>
                 <!-- Audio Player 5 -->
                 <div class="bg-white rounded-2xl shadow-lg p-6">
                     <h3 class="text-xl font-bold text-gray-800">Tratamiento del Ombligo</h3>
                     <p class="text-gray-600 mb-4">Una práctica para equilibrar tu cuerpo y mente desde tu centro físico.</p>
-                    <audio controls src="https://github.com/usuario/repo/raw/main/audios/Tratamiento%20del%20Ombligo.mp3">Tu navegador no soporta el elemento de audio.</audio>
+                    <audio controls src="/audios/Tratamiento%20del%20Ombligo.mp3"></audio>
                 </div>
                 <!-- Audio Player 6 -->
                 <div class="bg-white rounded-2xl shadow-lg p-6">
                     <h3 class="text-xl font-bold text-gray-800">Reiki al Futuro</h3>
                     <p class="text-gray-600 mb-4">Envía luz y bendiciones a tus metas y proyectos futuros.</p>
-                    <audio controls src="https://github.com/usuario/repo/raw/main/audios/Reiki%20al%20Futuro.mp3">Tu navegador no soporta el elemento de audio.</audio>
+                    <audio controls src="/audios/Reiki%20al%20Futuro.mp3"></audio>
                 </div>
             </div>
         </section>
