--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </a>
 
             <!-- Card: Extras -->
-            <a href="#" class="card bg-indigo-600 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center md:col-span-2 lg:col-span-2">
+            <a href="extras.html" class="card bg-indigo-600 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center md:col-span-2 lg:col-span-2">
                 <div class="mb-4">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-12v4m-2-2h4m5 4v4m-2-2h4M17 3h4M19 5v-4m0 18v-4m2 2h-4" />
@@ -147,4 +147,5 @@
 
 </body>
 </html>
+
 
