--- a/practicas.html
+++ b/practicas.html
@@ -44,7 +44,7 @@
     <!-- Header Section -->
     <header class="main-gradient text-white text-center py-12 sm:py-16 shadow-lg">
         <div class="container mx-auto px-4">
-            <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold tracking-tight">Extras y Recursos</h1>
+            <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold tracking-tight">Prácticas y Recursos</h1>
             <p class="mt-4 text-lg sm:text-xl font-light">Material para expandir tu práctica y conocimiento</p>
         </div>
     </header>
