--- a/dojo.html
+++ b/dojo.html
@@ -75,9 +75,9 @@
                     </div>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md flex justify-around items-center" id="symbol-container">
-                    <img src="chokurei.png" class="h-16 symbol-piece" draggable="true" data-symbol="Poder (Físico)">
-                    <img src="seiheki.png" class="h-16 symbol-piece" draggable="true" data-symbol="Armonía (Emocional)">
-                    <img src="honshazeshonen.png" class="h-16 symbol-piece" draggable="true" data-symbol="Conexión (Distancia)">
+                    <img src="ckr.png" class="h-16 symbol-piece" draggable="true" data-symbol="Poder (Físico)">
+                    <img src="shk.png" class="h-16 symbol-piece" draggable="true" data-symbol="Armonía (Emocional)">
+                    <img src="hszsn.png" class="h-16 symbol-piece" draggable="true" data-symbol="Conexión (Distancia)">
                 </div>
             </div>
         </section>
