--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                 <p class="font-light">Amplía tu conocimiento con audios, música y material adicional.</p>
             </a>
             
-            <a href="quiz.html" class="card bg-red-500 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center sm:col-span-2 lg:col-span-3">
+            <a href="dojo.html" class="card bg-red-500 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center sm:col-span-2 lg:col-span-3">
                 <div class="mb-4"><svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M11 4a2 2 0 114 0v1a1 1 0 001 1h3a1 1 0 011 1v3a1 1 0 01-1 1h-1a2 2 0 100 4h1a1 1 0 011 1v3a1 1 0 01-1 1h-3a1 1 0 01-1-1v-1a2 2 0 10-4 0v1a1 1 0 01-1 1H7a1 1 0 01-1-1v-3a1 1 0 00-1-1H4a2 2 0 110-4h1a1 1 0 001-1V7a1 1 0 011-1h3a1 1 0 001-1V4z" /></svg></div>
-                <h3 class="text-2xl font-bold mb-2">Quiz Interactivo</h3>
+                <h3 class="text-2xl font-bold mb-2">Dojo Interactivo</h3>
                 <p class="font-light">Pon a prueba tu conocimiento con juegos y actividades divertidas.</p>
             </a>
 
@@ -133,3 +133,4 @@
 
 </body>
 </html>
+
