--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a href="conceptos.html" class="card bg-purple-500 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center">
                 <div class="mb-4"><svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M13 10V3L4 14h7v7l9-11h-7z" /></svg></div>
                 <h3 class="text-2xl font-bold mb-2">Conceptos Clave</h3>
-                <p class="font-light">Profundiza en los pilares de Okuden: los símbolos, los kotodamas y la sanación.</p>
+                <p class="font-light">Profundiza en los pilares de Okuden: símbolos, kotodamas y sanación.</p>
             </a>
 
             <a href="simbolos.html" class="card bg-purple-600 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center">
@@ -82,13 +82,13 @@
             <a href="caja.html" class="card bg-amber-500 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center">
                  <div class="mb-4"><svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4" /></svg></div>
                 <h3 class="text-2xl font-bold mb-2">La Caja Reiki</h3>
-                <p class="font-light">Crea tu herramienta de manifestación para potenciar tus deseos.</p>
+                <p class="font-light">Crea tu herramienta de manifestación para potenciar tus intenciones</p>
             </a>
 
             <a href="practicas.html" class="card bg-teal-500 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center">
                 <div class="mb-4"><svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-12v4m-2-2h4m5 4v4m-2-2h4M17 3h4M19 5v-4m0 18v-4m2 2h-4" /></svg></div>
                 <h3 class="text-2xl font-bold mb-2">Prácticas y Recursos</h3>
-                <p class="font-light">Amplía tu conocimiento con audios, música y material adicional.</p>
+                <p class="font-light">Practicá con audios, música y material adicional.</p>
             </a>
             
             <a href="dojo.html" class="card bg-red-500 text-white p-8 rounded-2xl shadow-lg flex flex-col items-center text-center sm:col-span-2 lg:col-span-3">
@@ -133,4 +133,5 @@
 
 </body>
 </html>
+
 
