--- a/practicas.html
+++ b/practicas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audios y Recursos - Reiki Nivel II</title>
+    <title>Prácticas y Recursos - Reiki Nivel II</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,41 +64,36 @@
             <h2 class="text-3xl font-bold text-gray-800 mb-2">Prácticas Guiadas en Audio</h2>
             <p class="text-lg text-gray-600 mb-8">Escucha las meditaciones y técnicas para profundizar en tu práctica de Reiki.</p>
             <div class="space-y-6">
-                <!-- Audio Player 1 -->
+                <!-- Audio Players -->
                 <div class="bg-white rounded-2xl shadow-lg p-6">
                     <h3 class="text-xl font-bold text-gray-800">Sanación al Pasado</h3>
                     <p class="text-gray-600 mb-4">Viaja a tu pasado para enviar amor y sanación a tu yo más joven.</p>
-                    <audio controls src="/audios/Sanacion%20al%20Pasado.mp3"></audio>
+                    <audio controls src="https://github.com/usuario/repo/raw/main/Sanacion%20al%20Pasado.mp3">Tu navegador no soporta el elemento de audio.</audio>
                 </div>
-                 <!-- Audio Player 2 -->
                 <div class="bg-white rounded-2xl shadow-lg p-6">
                     <h3 class="text-xl font-bold text-gray-800">Reactivación Celular</h3>
                     <p class="text-gray-600 mb-4">Una meditación de gratitud para sanar y revitalizar cada célula de tu cuerpo.</p>
-                    <audio controls src="/audios/reactivacion%20celular%20(gratitud%20a%20las%20celulas).mp3"></audio>
+                    <audio controls src="https://github.com/usuario/repo/raw/main/reactivacion%20celular%20(gratitud%20a%20las%20celulas).mp3">Tu navegador no soporta el elemento de audio.</audio>
                 </div>
-                 <!-- Audio Player 3 -->
                 <div class="bg-white rounded-2xl shadow-lg p-6">
                     <h3 class="text-xl font-bold text-gray-800">Potenciar tu Canal (Hatsurei Ho)</h3>
                     <p class="text-gray-600 mb-4">Una práctica guiada para fortalecer tu conexión con la energía.</p>
-                    <audio controls src="/audios/Hatsurei%20Ho.mp3"></audio>
+                    <audio controls src="https://github.com/usuario/repo/raw/main/Hatsurei%20Ho.mp3">Tu navegador no soporta el elemento de audio.</audio>
                 </div>
-                <!-- Audio Player 4 -->
                 <div class="bg-white rounded-2xl shadow-lg p-6">
                     <h3 class="text-xl font-bold text-gray-800">Tanden Chiryo Ho</h3>
                     <p class="text-gray-600 mb-4">Guía para la desintoxicación energética a través de tu centro vital.</p>
-                    <audio controls src="/audios/TANDEN%20CHIRYO%20HO%20(que%20las%20toxinas%20bajen).mp3"></audio>
+                    <audio controls src="https://github.com/usuario/repo/raw/main/TANDEN%20CHIRYO%20HO%20(que%20las%20toxinas%20bajen).mp3">Tu navegador no soporta el elemento de audio.</audio>
                 </div>
-                <!-- Audio Player 5 -->
                 <div class="bg-white rounded-2xl shadow-lg p-6">
                     <h3 class="text-xl font-bold text-gray-800">Tratamiento del Ombligo</h3>
                     <p class="text-gray-600 mb-4">Una práctica para equilibrar tu cuerpo y mente desde tu centro físico.</p>
-                    <audio controls src="/audios/Tratamiento%20del%20Ombligo.mp3"></audio>
+                    <audio controls src="https://github.com/usuario/repo/raw/main/Tratamiento%20del%20Ombligo.mp3">Tu navegador no soporta el elemento de audio.</audio>
                 </div>
-                <!-- Audio Player 6 -->
                 <div class="bg-white rounded-2xl shadow-lg p-6">
                     <h3 class="text-xl font-bold text-gray-800">Reiki al Futuro</h3>
                     <p class="text-gray-600 mb-4">Envía luz y bendiciones a tus metas y proyectos futuros.</p>
-                    <audio controls src="/audios/Reiki%20al%20Futuro.mp3"></audio>
+                    <audio controls src="https://github.com/usuario/repo/raw/main/Reiki%20al%20Futuro.mp3">Tu navegador no soporta el elemento de audio.</audio>
                 </div>
             </div>
         </section>
@@ -106,31 +101,16 @@
         <!-- Music Section -->
         <section class="mb-16">
             <h2 class="text-3xl font-bold text-center text-gray-800 mb-8">Música para tus Sesiones</h2>
-             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Music Card 1 -->
-                <div class="resource-card bg-white rounded-2xl shadow-lg p-6 text-center">
-                    <h3 class="text-xl font-bold text-gray-800 mb-2">Música Relajante</h3>
-                    <p class="text-gray-600 mb-4">Melodías suaves para crear un ambiente de paz y tranquilidad.</p>
-                    <button class="w-full bg-gray-300 text-gray-500 font-bold py-2 px-4 rounded-lg cursor-not-allowed">(Próximamente)</button>
-                </div>
-                <!-- Music Card 2 -->
-                <div class="resource-card bg-white rounded-2xl shadow-lg p-6 text-center">
-                    <h3 class="text-xl font-bold text-gray-800 mb-2">Instrumental</h3>
-                    <p class="text-gray-600 mb-4">Piezas instrumentales que elevan la vibración del espacio.</p>
-                    <button class="w-full bg-gray-300 text-gray-500 font-bold py-2 px-4 rounded-lg cursor-not-allowed">(Próximamente)</button>
-                </div>
-                <!-- Music Card 3 -->
-                <div class="resource-card bg-white rounded-2xl shadow-lg p-6 text-center">
-                    <h3 class="text-xl font-bold text-gray-800 mb-2">Sonidos de la Naturaleza</h3>
-                    <p class="text-gray-600 mb-4">Conecta con la energía de la Tierra a través de sus sonidos.</p>
-                    <button class="w-full bg-gray-300 text-gray-500 font-bold py-2 px-4 rounded-lg cursor-not-allowed">(Próximamente)</button>
-                </div>
-            </div>
+             <div class="bg-white rounded-2xl shadow-lg p-8 max-w-2xl mx-auto">
+                <h3 class="text-2xl font-bold text-gray-800 text-center">Radio Reiki</h3>
+                <p class="text-gray-600 mb-6 text-center">Música ambiental para meditar y relajarse (SomaFM Drone Zone).</p>
+                <audio controls src="http://streams.calmradio.com/api/v1/streams/healing/stream">Tu navegador no soporta el elemento de audio.</audio>
+             </div>
         </section>
 
         <!-- Additional Resources Section -->
         <section>
-             <h2 class="text-3xl font-bold text-center text-gray-800 mb-8">Recursos Adicionales</h2>
+             <h2 class="text-3xl font-bold text-center text-gray-800 mb-8">Para seguir profundizando</h2>
              <div class="bg-white rounded-2xl shadow-lg p-8 max-w-2xl mx-auto">
                 <ul class="space-y-4">
                     <li class="flex items-start"><span class="mr-3 text-purple-500">📖</span><div><h4 class="font-bold">Libro Recomendado:</h4><p class="text-gray-600">"Reiki: El Legado del Dr. Usui" - Frank Arjava Petter</p></div></li>
