--- a/practicas.html
+++ b/practicas.html
@@ -104,7 +104,7 @@
              <div class="bg-white rounded-2xl shadow-lg p-8 max-w-2xl mx-auto">
                 <h3 class="text-2xl font-bold text-gray-800 text-center">Radio Reiki</h3>
                 <p class="text-gray-600 mb-6 text-center">Música ambiental para meditar y relajarse (SomaFM Drone Zone).</p>
-                <audio controls src="http://streams.calmradio.com/api/v1/streams/healing/stream">Tu navegador no soporta el elemento de audio.</audio>
+                <audio controls src="http://pub1.di.fm/di_meditation">Tu navegador no soporta el elemento de audio.</audio>
              </div>
         </section>
 
