--- a/practicas.html
+++ b/practicas.html
@@ -103,8 +103,8 @@
             <h2 class="text-3xl font-bold text-center text-gray-800 mb-8">Música para tus Sesiones</h2>
              <div class="bg-white rounded-2xl shadow-lg p-8 max-w-2xl mx-auto">
                 <h3 class="text-2xl font-bold text-gray-800 text-center">Radio Reiki</h3>
-                <p class="text-gray-600 mb-6 text-center">Música ambiental para meditar y relajarse (SomaFM Drone Zone).</p>
-                <audio controls src="http://pub1.di.fm/di_meditation">Tu navegador no soporta el elemento de audio.</audio>
+                <p class="text-gray-600 mb-6 text-center">Música ambiental para meditar y relajarse.</p>
+                <audio controls src="https://live.radioart.com/fSleep.mp3">Tu navegador no soporta el elemento de audio.</audio>
              </div>
         </section>
 
